--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="/style.css">
+  <script src="/script.js"></script>
+  <title>Coding Challenge TCP2023</title>
 </head>
 <body>
   <h1>Helloooooooooooooo world</h1>
