--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <title>Coding Challenge TCP2023</title>
 </head>
 <body>
-  <h1>Helloooooooooooooo world</h1>
+  <h4>Bootstrap and JS/Query Worksheet</h4>
+  <h1>Week 0 Class Work</h1>
+  <div class="container">
+    <div class="box1">1</div>
+    <div class="box2">2</div>
+    <div class="box3">3</div>
+
+
+  </div>
   
 </body>
 </html>
