--- a/index.html
+++ b/index.html
@@ -11,12 +11,29 @@
   <h4>Bootstrap and JS/Query Worksheet</h4>
   <h1>Week 0 Class Work</h1>
   <div class="container">
-    <div class="box1">1</div>
-    <div class="box2">2</div>
-    <div class="box3">3</div>
-
-
+    <div class="box1"></div>
+    <div class="box2"></div>
+    <div class="box3"></div>
   </div>
-  
+  <h3>Change Buttons</h3>
+  <div class="container2">
+  <button class="btn1">Change Box 1</button>
+  <button class="btn2">Change Box 2</button>
+  <button class="btn3">Change Box 3</button>
+  <button class="btn1">Change All</button>
+</div>
+</div>
+<h5>Hide Buttons</h5>
+<div class="container2">
+<button class="btnhide1">Hide Box 1</button>
+<button class="btnhide2">Hide Box 2</button>
+<button class="btnhide3">Hide Box 3</button>
+<button class="btnhide1">Hide All</button>
+</div>
+<div>
+  <div class="container3">
+    <button class="btnreset1">Reset Colors</button>
+    <button class="btnshow2">Show All</button>
+</div>
 </body>
 </html>
